--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.13.1
+  firebase_auth: ^4.6.2
+  provider: ^6.0.5
+  cloud_firestore: ^4.8.0
+  path_provider: ^2.0.15
+  http: ^0.13.6
+  sqflite: ^2.2.8+4
+  uuid: ^3.0.7
+  fl_chart: ^0.62.0
+
+
+
+
 
 dev_dependencies:
   flutter_test:
